feat(web/api): add metadata apis
Avoid clients hardcoding constants.
